# collective.taxonomy

./: .coveragerc  .dockerignore  .flake8  .gitignore  .installed.txt  .meta.toml  .travis.yml  .travis.yml.bak  CHANGES.rst  Dockerfile  MANIFEST.in  Makefile  Makefile.docker  README.rst  base.cfg  buildout.cfg  docker-compose.yml  forest.json  instance.yaml  mx.ini  pyproject.toml  requirements-5.0.x.txt  requirements.txt  setup.cfg  setup.py  test-5.0.x.cfg  test-5.1.x.cfg  test-5.2.x.cfg  test-6.0.x.cfg  tox.ini  travis.cfg  versions-test-5.1.x.cfg  versions-test-5.2.x.cfg
.github/workflows/: main.yml  meta.yml  test-matrix.yml  zpretty.yml
.tx/: config
docs/: 105.bugfix  116.bugfix  155.bugfix  LICENSE.rst  tutorial.md
news/: +config.breaking  +pnpm-webpack5.internal
resources/: .babelrc  .eslintignore  .eslintrc  .gitignore  Makefile  cypress.json  package.json  pnpm-lock.yaml  server.js  webpack.config.js  webpack.config.prod.js
resources/cypress/integration/: end_to_end.js
resources/src/js/: actions.js  constants.js  i18n.js  reducers.js
resources/src/test/: reducers.spec.js
src/collective/: __init__.py
src/collective/taxonomy/: __init__.py  behavior.py  browser.py  collectionfilter.py  collective.taxonomy.css  configure.zcml  controlpanel.pt  controlpanel.py  dynatree.ui.css  edit_taxonomy_data.pt  exportimport.py  factory.py  generated.py  i18n.py  indexer.py  interfaces.py  json.py  jsonimpl.py  listing_tabular.pt  rebuild_i18n.sh  setuphandlers.py  taxonomy_edit.pt  testing.py  testing.zcml  traversal.py  upgradesteps.py  upgradesteps.zcml  (+7 more)
(+176 files in other folders)
