[metadata]
version = 2.0.0-dev
name = collective.taxonomy
description = Create, edit and use hierarchical taxonomies in Plone!
long_description = file: README.rst, CHANGES.rst
keywords = plone taxonomy dexterity
author = Bo Simonsen and Malthe Borch
author_email = bo@headnet.dk
url = http://pypi.python.org/pypi/collective.taxonomy
license = GPLv2+
classifiers =
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 5.1
    Framework :: Plone :: 5.2
    Framework :: Zope
    Framework :: Zope :: 2
    Framework :: Zope :: 4
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
include_package_data = True
install_requires = 
    setuptools
    plone.supermodel
    plone.api >= 1.5
    plone.app.registry
    plone.app.dexterity
    lxml
    six

namespace_packages =
    collective
package_dir = 
    src

packages = find:
zip_safe = False

[options.extras_require]
test =
    plone.testing
    plone.app.testing
    plone.app.contenttypes
    Products.contentmigration
    plone.app.robotframework[debug]

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[isort]
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 79
not_skip = __init__.py
use_parentheses = True
multi_line_output = 3

[zest.releaser]
create-wheel = yes